# AntigravityOS

./: .env.example  .gitignore  .gitmodules  AGENT_GUIDE.md  AntigravityOS_Improvements.md  DEPLOYMENT_DOCKER.md  Dockerfile  LICENSE  Project - Antigravity OS 开发全记录.md  README.md  docker-compose.yml  micrograd_study_guide.md  plan.md  pyproject.toml  requirements.docker.txt  scheduler.py
agos/: __init__.py  config.py  dedup_store.py  frontmatter.py  lock.py  notify.py
data/: obsidian_inbox
docs/: PRD-engineering-refactor.md  commit_digest_classification_pr_checklist.md  plan.md  telegram_notification_stability_plan.md
scripts/: dashboard.py  dedup_rss_inbox.py  generate_report.py  init_env.py  init_env.sh  notify_audit.py  rollback_dedup_manifest.py  run_bouncer.sh  setup_cron.sh  stats.py
skills/: __init__.py
tests/: conftest.py  test_axiom_synthesizer.py  test_bouncer_dedup_store.py  test_bouncer_pipeline.py  test_commit_digest.py  test_commit_digest_classifier.py  test_commit_digest_renderer.py  test_commit_digest_state.py  test_config.py  test_daily_briefing_report.py  test_dashboard_error_panel.py  test_dedup_manifest_rollback.py  test_dedup_rss_inbox.py  test_error_pipeline_e2e.py  test_feishu_bot_sender.py  test_feishu_bridge.py  test_frontmatter.py  test_generate_report_error_types.py  test_inbox_processor_pipeline.py  test_lock.py  test_notify.py  test_notify_audit.py  test_scheduler_integration.py  test_stats_cron_idle_hours.py  test_stats_error_types.py  test_stats_logging.py  test_tool_gateway.py  test_tool_gateway_service.py  (+1 more)
(+59 files in other folders)
